senstive attributes fixed

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -1482,15 +1482,11 @@ After a proper domain analysis the protected attributes selected to be passed to
 
     \item public\textunderscore private: if the school is public or private
 
-    \item inmigrant: if the student is either inmigrant or not
-
-    \item inmigrant second gen: if the student is either inmigrand of second gen or not
-
     \item parent expectation
     
     \item mothly houseold income
 
-    \item cconomic, social and cultural satus index
+    \item economic, social and cultural satus index
 
 \end{enumerate}
 
