--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -1590,7 +1590,7 @@ For each of the previous approaches have been chosen 3 models to perform the pre
 
     \item \text{RandomForest Classifier}: RandomForest Classifier is a popular machine learning algorithm that leverages an ensemble of decision trees to make predictions. It excels at tasks like classification and regression, offering robustness against overfitting and high accuracy by aggregating the predictions of multiple decision trees. It's a versatile tool used in various applications, from finance to healthcare and image analysis.
     
-    \item \textbf{SVM Classifier}: Support Vector Machine (SVM) is a supervised machine learning algorithm that can be used for both classification and regression tasks. The primary objective of SVM is to find a hyperplane in an N-dimensional space (where N is the number of features) that best separates the data points of one class from another. This hyperplane is chosen to maximize the margin between the classes.
+    \item \textbf{LGB Classifier}: LightGBM, short for Light Gradient Boosting Machine, stands out as a powerful gradient boosting framework that originated from the innovation labs at Microsoft. Engineered with a specific focus on efficiency, speed, and scalability, LightGBM has become a prominent choice in the realm of machine learning, demonstrating exceptional performance across various tasks.
     
     \item \textbf{DecisionTree Classifier}: DecisionTree Classifier is a specific type of machine learning algorithm primarily used for classification tasks. It constructs a tree-like model, where each internal node represents a decision based on a specific feature, and each leaf node denotes the predicted class label for the input data point.
 
@@ -1614,7 +1614,7 @@ On the previous models is applied the GridSearch with a \emph{cv} of 10 in order
     
     \end{enumerate}
     
-    \item SVM Classifier:
+    \item LGB Classifier:
     
     \begin{enumerate}
 
@@ -1657,7 +1657,7 @@ This focused analysis on grade 3 allows us to uncover insights that are specific
     \hline
     RandomForest Classifier  &  \\
     \hline
-    SVM Classifier & \\
+    LGB Classifier & \\
     \hline
     DecisionTree Classifier & \\
     \hline
@@ -1671,7 +1671,7 @@ This focused analysis on grade 3 allows us to uncover insights that are specific
     \hline
     RandomForest Classifier  &  \\
     \hline
-    SVM Classifier & \\
+    LGB Classifier & \\
     \hline
     DecisionTree Classifier & \\ 
     \hline
@@ -1685,7 +1685,7 @@ This focused analysis on grade 3 allows us to uncover insights that are specific
     \hline
     RandomForest Classifier & & \\
     \hline
-    SVM Classifier & & \\
+    LGB Classifier & & \\
     \hline
     DecisionTree Classifier & & \\
     \hline
@@ -1701,7 +1701,7 @@ This focused analysis on grade 3 allows us to uncover insights that are specific
     \hline
     RandomForest Classifier  &  \\
     \hline
-    SVM Classifier & \\
+    LGB Classifier & \\
     \hline
     DecisionTree Classifier & \\
     \hline
@@ -1715,7 +1715,7 @@ This focused analysis on grade 3 allows us to uncover insights that are specific
     \hline
     RandomForest Classifier  &  \\
     \hline
-    SVM Classifier & \\
+    LGB Classifier & \\
     \hline
     DecisionTree Classifier & \\ 
     \hline
@@ -1729,7 +1729,7 @@ This focused analysis on grade 3 allows us to uncover insights that are specific
     \hline
     RandomForest Classifier & & \\
     \hline
-    SVM Classifier & & \\
+    LGB Classifier & & \\
     \hline
     DecisionTree Classifier & & \\
     \hline
@@ -1745,7 +1745,7 @@ This focused analysis on grade 3 allows us to uncover insights that are specific
     \hline
     RandomForest Classifier  &  \\
     \hline
-    SVM Classifier & \\
+    LGB Classifier & \\
     \hline
     DecisionTree Classifier & \\
     \hline
@@ -1759,7 +1759,7 @@ This focused analysis on grade 3 allows us to uncover insights that are specific
     \hline
     RandomForest Classifier  &  \\
     \hline
-    SVM Classifier & \\
+    LGB Classifier & \\
     \hline
     DecisionTree Classifier & \\ 
     \hline
@@ -1773,7 +1773,7 @@ This focused analysis on grade 3 allows us to uncover insights that are specific
     \hline
     RandomForest Classifier & & \\
     \hline
-    SVM Classifier & & \\
+    LGB Classifier & & \\
     \hline
     DecisionTree Classifier & & \\
     \hline
